Fixed issue causing share buttons to be unclickable on iOS devices

--- a/public/stylesheets/invitefriends.css
+++ b/public/stylesheets/invitefriends.css
@@ -128,7 +128,7 @@
     opacity: 0.8;
 }
 .prompt-container {
-    opacity: 0;
+    display: none;
     position: absolute;
     z-index: 999;
     width: 90vw;
@@ -138,12 +138,10 @@
     transform: translate(-50%, -50%);
     background-color: white;
     padding: 40px 0px;
-    transition: 0.5s;
     color: #25b5ee;
     border-radius: 15px;
 }
 .prompt-container.active {
-    opacity: 1;
     left: 50%;
     top: 50%;
 }
